# oblique-games

./: .gitattributes  .gitignore  Makefile  README.md  poetry.show  pyproject.toml
.github/workflows/: branch.yaml  build.yml  deploy.yml  linting.yml  release.yml  tests.yml
.itch/: description.html  itch_game_list.html
.itch/healthy/: description.html  itch_game_list.html  tagline.txt
.itch/original/: tagline.txt
scripts/: extract_strategy.py  find_errors.py  fix_file_names.py  itch_assets.py  optimize_covers.py  super_cover.py
src/oblique_games/: __init__.py  config.lua  crt.py  font.lua  font.py  helpers.lua  helpers.py  main.lua  main.py  shader.lua  shader.py  sound.lua  sound.py  ui.lua  ui.py
src/oblique_games/assets/games/: itch_game_list.html
src/oblique_games/assets/shaders/: fragment.glsl
src/oblique_games/assets/shaders/love/: pixel.glsl  vertex.glsl
src/oblique_strategy_games/: __init__.py  crt.py  font.py  game_browser.py  helpers.py  main.py  optimize_covers.py  shader.py  ui.py
src/oblique_strategy_games/games/Boggle/BraveWords/: metadata.json
src/oblique_strategy_games/games/Bomberman/ChaosBomber/: metadata.json
src/oblique_strategy_games/games/Carcassonne/HonorableRealms/: metadata.json
src/oblique_strategy_games/games/Catan/FramedSettlements/: metadata.json
src/oblique_strategy_games/games/Checkers/FragmentedKings/: metadata.json
src/oblique_strategy_games/shaders/: fragment.glsl
src/theme/aquatic/assets/: config.json
src/theme/healthy/assets/: config.json
src/theme/original/assets/: config.json
(+224 files in other folders)
